[workspace]
members = [
  "helix-core",
  "helix-view",
  "helix-term",
  "helix-tui",
  "helix-lsp",
  "helix-dap",
  "helix-loader",
  "xtask",
]

default-members = [
  "helix-term",
]

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
strip = true

[profile.opt]
inherits = "release"
lto = "fat"
codegen-units = 1
# strip = "debuginfo" # TODO: or strip = true
opt-level = 3

[patch.crates-io]
unicode-width = { git = "https://github.com/waltarix/unicode-width", tag = "v0.1.10-custom" }
